# llm-o11y-platform

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  clickhouse-init.sql  docker-compose.yaml  loki-config.yaml  otel-collector-config.yaml  prometheus.yaml  pyproject.toml  requirements.txt  tempo-config.yaml
docs/: CORPORATE-DEPLOYMENT.md  ROADMAP.md  linkedin-post.md
grafana/dashboards/: ai-agent-sessions.json  ai-cost-intelligence.json  ai-model-comparison.json  ai-reliability-engineering.json  error-analysis.json  eval-quality.json  gateway-operations.json  guardrails-analytics.json  llm-anthropic.json  llm-bedrock.json  llm-cohere.json  llm-cost-and-tokens.json  llm-kpi.json  llm-openai.json  llm-overview.json  llm-qos.json  llm-trace-explorer.json  llm-traces-advanced.json  llm-vertex.json
k8s/base/: configmap.yaml  gateway-deployment.yaml  namespace.yaml  otel-collector.yaml
scripts/: deploy-aks.sh  test-gateway.sh  test_stale_policy.py
src/: app.py  config.py
src/auth/: __init__.py  manager.py  middleware.py  models.py
src/eval/: __init__.py  datasets.py  judge.py  router.py
src/gateway/: __init__.py  cache.py  circuit_breaker.py  context_window.py  middleware.py  rate_limiter.py  retry.py  router.py  routing.py  stale_policy.py  virtual_keys.py
src/guardrails/: __init__.py  engine.py  pii.py  router.py
src/mcp_tracer/: __init__.py  interceptor.py  router.py
src/models/: __init__.py  eval.py  keys.py  prompts.py  telemetry.py
src/otel/: llm_spans.py  mcp_spans.py  setup.py
src/prompts/: __init__.py  router.py  templates.py
src/providers/: __init__.py  anthropic_provider.py  base.py  bedrock_provider.py  cohere_provider.py  openai_provider.py  vertex_provider.py
src/static/: app.js
src/templates/: admin.html  base.html  eval.html  guardrails.html  index.html  keys.html  landing.html  login.html  logs.html  playground.html  prompts.html  (+3 more)
(+4 files in other folders)
